<resources>
    <string name="app_name">GdzieZjem-Mapa</string>
    <string name="search_dots">Szukaj…</string>
    <string name="search">Szukaj</string>
    <string name="see">Zobacz</string>
    <string name="show_all_on_map">Zobacz wszystkie na mapie</string>
    <string name="jakdojade_pl">JakDojadę</string>
    <string name="more">Więcej</string>
    <string name="jzm_image">JZM-image</string>
    <string name="about">O aplikacji</string>
    <string name="author">Paweł Mleczko</string>
    <string name="banner_ad_unit_id">ca-app-pub-4571255084527146/6904203919</string>
    <string name="title_activity_points">Punkty</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_point">PointActivity</string>
    <string name="call">Zadzwoń</string>
    <string name="all">Ogólne</string>
    <string name="www">WWW</string>
    <string name="categories">Kategorie</string>

    <string name="settings">Ustawienia</string>
    <string name="wait">Poczekaj chwilę, ładuję…</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to tokenTruncate -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Zaloguj</string>
    <string name="account">Konto</string>
    <string name="title_activity_add_new_point">AddNewPointActivity</string>
    <string name="addNew">Dodaj nowy</string>
</resources>
