<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.mleczko_pawel.myapplication.MainActivity">

    <item
        android:id="@+id/account"
        android:orderInCategory="100"
        android:title="@string/account"
        app:showAsAction="never" />

    <item
        android:id="@+id/addNew"
        android:orderInCategory="100"
        android:title="@string/addNew"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/show_categories"
        android:orderInCategory="100"
        android:title="@string/categories"
        android:icon="@drawable/ic_groups_points"
        app:showAsAction="always" />
</menu>