<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:id="@+id/pointContent"
    android:layout_above="@id/adView_point"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.mleczko_pawel.jakzjem_mapapl.activity.PointActivity"
    tools:showIn="@layout/activity_point">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/all"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/row"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/single_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/single_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/single_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/accent_button"
                    android:text="@string/call"
                    android:textColor="@color/white"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/single_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/primary_button"
                    android:text="@string/www"
                    android:textColor="@color/white"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/categories"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/row"
            android:orientation="vertical">

            <ListView
                android:id="@+id/categories_list"
                style="@style/Widget.AppCompat.ListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:cacheColorHint="@color/cardview_dark_background" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
